# Program-Construction-in-Cpp-for-Scientific-Computing

./: CMakeLists.txt  README.md  domain.cpp  equation_curve.cpp  main.cpp  measure.cpp  newton.cpp  newton.hpp  plotting_script.py  point.cpp  straightline.cpp
assignment1/: README.md  functions.cxx  functions.hxx  main.cxx  unit_test.cxx
assignment2/: CMakeLists.txt  README.md
assignment2/include/: mpl_writer.hpp  point.hpp  point_reader.hpp  quadtree.hpp  random_points.hpp  rectangle.hpp  timer.hpp
assignment2/src/: CMakeLists.txt  point.cpp  quadtree.cpp  rectangle.cpp
assignment2/test/: CMakeLists.txt  main.cpp  performances_capacity.cpp  performances_capacity.py  performances_points.cpp  performances_points.py  plot.py  plot_query.py  test_query.cpp
assignment3/: CMakeLists.txt  README.md
assignment3/include/: bottomCurve.hpp  curve.hpp  domain.hpp  point.hpp  straightline.hpp
assignment3/src/: CMakeLists.txt  bottomCurve.cpp  domain.cpp  equation_curve.cpp  newton.cpp
assignment3/test/: plotting_script.py
include/: equation_curve.hpp
src/: bottomCurve.cpp  newton.cpp  point.cpp  straightline.cpp
test/: CMakeLists.txt  main.cpp  measure.cpp  measure_graph.py
